--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/back1.jpeg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><img src="images/heni.jpg" alt="Image" /></div>
+          <div class="cc-profile-image"><img src="images/1.jpg" alt="Image" /></div>
           <div class="title" style="font-size: 50px;font-family: 'Accanthis ADF Std No2'"> RANDRIANASOLO Henintsoa Harinoro</div>
              </div>
       </div>
@@ -293,9 +293,14 @@
           <p class="mb-0"><strong>Phone</strong></p>
           <p class="pb-2"><strong style="font-size: medium;">+261 32 69 228 50/ +261 34 94 951 65</strong></p>
           <p class="mb-0"><strong>Email</strong></p>
-          <a href="mailto:henintsoaharinororandrianasolo@gmail.com"> <p><strong style="font-size: medium;">henintsoaharinororandrianasolo@gmail.com / henintsoa.harinoro@yahoo.com</strong></p>
-          <p class="mb-0"><strong>Social Media</strong></p>
-          <p><strong style="font-size: medium;">Facebook: Henintsoa Randrianasolo/ LinkedIn :Henintsoa Harinoro Randrianasolo</strong></p>
+          <a href="mailto:henintsoaharinororandrianasolo@gmail.com"> <p><strong style="font-size: medium;">henintsoaharinororandrianasolo@gmail.com</strong></p>
+          </a>
+
+
+
+          <a href="https://www.linkedin.com/in/henintsoa-harinoro-randrianasolo-501421198/" target="_blank" rel="noopener noreferer"><img src="images/5296501_linkedin_network_linkedin%20logo_icon.png" style="height: 50px;width: 50px"></a>
+
+          <a href="https://web.facebook.com/henintsoa.horimiya" target="_blank" rel="noopener noreferer"><img src="images/fb.ico" style="height: 50px;width: 50px"></a>
 
         </div>
       </div>
